[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptohan"
dynamic = ["version"]
description = "Enkripsi file (AES-256-GCM / RSA-2048 Hybrid) & transfer P2P aman (Noise Protocol) dengan verifikasi anti-MITM."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=43",
]

[project.optional-dependencies]
transport = ["noiseprotocol>=0.3.1"]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]
build = ["pyinstaller>=6.21"]

[project.scripts]
cryptohan = "cryptohan.cli:main"

[tool.setuptools.dynamic]
version = { attr = "cryptohan.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
# E702 (semicolon-joined statements) diabaikan: gaya kompak ini dipakai
# secara konsisten di seluruh basis kode ini sejak awal, bukan cacat.
ignore = ["E702"]
